test/fail/class_field_undefined_type.zn
# ERRORS: 1
# Class field with undefined type (previously not caught)
class Foo {
    var bar: NonExistent
}
func main() { 0 }
